@@ -93,7 +93,7 @@ extern "C"
 #define NTOH_ERROR_NOSPACE			2
 #define NTOH_ERROR_NOKEY			3
 #define NTOH_ERROR_NOFUNCTION		4
-#define NTOH_ERROR_INVALID_TUPLE4	5
+#define NTOH_ERROR_INVALID_TUPLE5	5
 #define NTOH_ERROR_PARAMS			6
 #define NTOH_ERROR_INIT				7
 
