@@ -1,5 +1,11 @@
 libntoh (0.4a)
 
+	* Added some sanity checks of functions input
+	* Added a function to get the tuple4 for an IPv4 flow
+	* Added a function to get the tuple5 for an TCP/IPv4 stream
+	* New field (protocol) added to identify TCP streams. ntoh_tcp_tuple4_t becomes ntoh_tcp_tuple5_t
+	* Added a function to get the max. amount of IPv4 flows that can be stored (ntoh_ipv4_getsize)
+	* Added a function to get the max. amount of TCP streams that can be stored (ntoh_tcp_getsize)
 	* Added a flag to indicate we want to receive segments from a given peer
 	* Fixed a MAJOR bug in TCP (avoided to correctly finish TCP streams)
 	* Self implementation of hash tables (collision resolution by chaining)
@@ -28,7 +34,7 @@ libntoh (0.2a)
 	* Documentation regenerated
 	* Added forgotten call to "shandler" in ntohexample
 	* Added pkg-config compilation support
-	
+
 	-- Chema Garcia <sch3m4@opensec.es> (14/11/2011)
 
 libntoh (0.1a)
